removed broken ref since EVM is no longer there

--- a/body.tex
+++ b/body.tex
@@ -5,13 +5,13 @@ This document provides a guide to the \VRO \   approach to annual planning.
 See also the the operations proposal \citeds{LDO-31}
 In operations, there is no \gls{Primavera} or \gls{EVMS} as there are for the Rubin Construction Project.
 
-There are a few main ways work will be managed, some within an Agile framework (particularly for data release planning). 
-The Agile method is a set of practices that allow the ability to adapt and respond to change through collaboration between self-managing, cross-functional teams.  
-To the extent possible, we focus on the people doing the work and how they work together. 
+There are a few main ways work will be managed, some within an Agile framework (particularly for data release planning).
+The Agile method is a set of practices that allow the ability to adapt and respond to change through collaboration between self-managing, cross-functional teams.
+To the extent possible, we focus on the people doing the work and how they work together.
 
-This framework allows the multidisciplinary Rubin team to operate the facility and generate nightly data products while continuously improving efficiency of workflows (``Kanban'' style\footnote{Kanban is a visual system for managing work as it moves through a process. 
-Kanban is a concept related to lean and just-in-time (JIT) production, where it is used as a scheduling system that tells you what to produce, when to produce it, and how much to produce.}), 
-as well as iteratively responding to user feedback on a longer timescale to maximize the scientific benefit of annual data releases (``scrum'' style\footnote{https:\/\/en.wikipedia.org\/wiki\/Scrum\_(software\_development)}).  
+This framework allows the multidisciplinary Rubin team to operate the facility and generate nightly data products while continuously improving efficiency of workflows (``Kanban'' style\footnote{Kanban is a visual system for managing work as it moves through a process.
+Kanban is a concept related to lean and just-in-time (JIT) production, where it is used as a scheduling system that tells you what to produce, when to produce it, and how much to produce.}),
+as well as iteratively responding to user feedback on a longer timescale to maximize the scientific benefit of annual data releases (``scrum'' style\footnote{https:\/\/en.wikipedia.org\/wiki\/Scrum\_(software\_development)}).
 
 Some examples that will use the kanban style are the daily functionality checks needed for nightly operations of the telescope or the regular monitoring of progress toward achieving milestones and reporting to governing organizations.
 For either of these examples, we will maintain a set of tasks that need to be performed in sequence every cycle.
@@ -29,34 +29,34 @@ The Rubin Observatory Acting \ \gls{Director}  is Robert Blum, the Interim Deput
 They are the first point of contact for all issues regarding project management within \RO.
 
 The Program Coordinator is Cathy Petry.
-She monitors the budgets and maintains details within WeBud, the NOIRLab budgeting system. 
-She assists in developing the annual Program Operating Plan (POP), tracking milestones and reporting. 
-On the SLAC side, Christine Soldahl is the Business Manager who handles similar tasks. 
+She monitors the budgets and maintains details within WeBud, the NOIRLab budgeting system.
+She assists in developing the annual Program Operating Plan (POP), tracking milestones and reporting.
+On the SLAC side, Christine Soldahl is the Business Manager who handles similar tasks.
 
-The POP is a defined report and process for NOIRLab. 
-Rubin Operations considers the POP to be a Rubin activity, which informs both NOIRLab and SLAC leadership of the annual Rubin activity including milestones and budget. 
-For NOIRLab, the Rubin POP is integrated and delivered to NSF for the next fiscal year at the end of the current fiscal year. 
-For SLAC, the POP informs SLAC's annual planning, which culminates in a Field Work Proposal (FWP) for all SLAC High Energy Physics activity including Rubin. 
+The POP is a defined report and process for NOIRLab.
+Rubin Operations considers the POP to be a Rubin activity, which informs both NOIRLab and SLAC leadership of the annual Rubin activity including milestones and budget.
+For NOIRLab, the Rubin POP is integrated and delivered to NSF for the next fiscal year at the end of the current fiscal year.
+For SLAC, the POP informs SLAC's annual planning, which culminates in a Field Work Proposal (FWP) for all SLAC High Energy Physics activity including Rubin.
 
-The FWP is delivered in June of the current fiscal year, and covers the federal budget request for the next two fiscal years. 
-The FWP is previewed to SLAC management and DOE in February in advance of the final delivery in June. 
-Because the POP for NSF and FWP for DOE are out of phase, Rubin does high level planning in early Q2 of the financial year. 
-Detailed activity planning, including lower level milestones, continues though the year in advance of the next year. 
+The FWP is delivered in June of the current fiscal year, and covers the federal budget request for the next two fiscal years.
+The FWP is previewed to SLAC management and DOE in February in advance of the final delivery in June.
+Because the POP for NSF and FWP for DOE are out of phase, Rubin does high level planning in early Q2 of the financial year.
+Detailed activity planning, including lower level milestones, continues though the year in advance of the next year.
 This detailed planning is the subject of this document.
 
 \section{Formal Organizational Structure}
 \label{sec:structure}
 
-Rubin Operations has four operational Departments in addition to the Director’s Office: RDO (Rubin Director’s Office), ROO (Rubin Observatory Operations), RDP (Rubin Data Production), RPF (Rubin System Performance), and REO (Rubin Education and Public Outreach). 
+Rubin Operations has four operational Departments in addition to the Director’s Office: RDO (Rubin Director’s Office), ROO (Rubin Observatory Operations), RDP (Rubin Data Production), RPF (Rubin System Performance), and REO (Rubin Education and Public Outreach).
 Each operational Department is lead by an Associate Director.
 
 \subsection{Work Breakdown Structure}
 \label{sec:wbs}
 
-The \gls{WBS} provides a hierarchical description of the activity based organization of Rubin. 
-In operations, the WBS is not as formal as in a construction project, but it provides a useful structure to organize Rubin Operations and plan annual work around. 
-Rubin is the level 1 of the WBS, the departments are level 2, and teams within the departments are level 3. 
-Individual roles on operations are level 4.   
+The \gls{WBS} provides a hierarchical description of the activity based organization of Rubin.
+In operations, the WBS is not as formal as in a construction project, but it provides a useful structure to organize Rubin Operations and plan annual work around.
+Rubin is the level 1 of the WBS, the departments are level 2, and teams within the departments are level 3.
+Individual roles on operations are level 4.
 
 Thus:
 
@@ -79,15 +79,15 @@ Thus:
 %\subsection{The Control Account Manager}
 %\label{sec:cam}
 
-Detailed work is planned in advance of each financial year at the team level. 
-Team leads will work with department associate directors to develop plans for activities that address specific milestones, projects, and level of effort activity. 
-Highest level milestones are reported regularly throughout the fiscal year to SLAC, AURA, NSF and DOE. 
+Detailed work is planned in advance of each financial year at the team level.
+Team leads will work with department associate directors to develop plans for activities that address specific milestones, projects, and level of effort activity.
+Highest level milestones are reported regularly throughout the fiscal year to SLAC, AURA, NSF and DOE.
 
 
 \subsection{Level of Effort Work}
 \label{sec:loe}
 
-There is work throughout Rubin Operations that will be recorded as a \gls{LOE}. 
+There is work throughout Rubin Operations that will be recorded as a \gls{LOE}.
 These activities include attending meetings, reporting on milestones, or taking part in other activities which do not directly map to deployed code.
 This may be particularly the case for technical managers or others in leadership roles.
 \gls{LOE} work is assumed to earn value (informally) simply through the passage of time.
@@ -95,7 +95,7 @@ This may be particularly the case for technical managers or others in leadership
 In general, we strive to minimize the fraction of effort which is devoted to \gls{LOE} activities and favor those which are more directly accountable.
 However, in certain cases such as operations and maintenance of telescope and facility systems, pipelines or other systems, \gls{LOE} is perfectly acceptable.
 
-As an example, a first-order estimate is that developers will spent 30\% of their time on \gls{LOE} type activities, and the remaining 70\% of their effort is tracked against concrete deliverables. 
+As an example, a first-order estimate is that developers will spent 30\% of their time on \gls{LOE} type activities, and the remaining 70\% of their effort is tracked against concrete deliverables.
 Technical staff in Chile at the summit facility may spend a much more significant fraction of time as  \gls{LOE}.
 However, as above, we generally aspire to minimize the fraction of \gls{LOE} for development activity.
 
@@ -116,12 +116,12 @@ Staff in ``scientist'' roles are expected to spend 20\% of their time on persona
 That is, scientists are expected to devote 1,440 hours per
 year to operations activity, and the remainder of their time to personal research.
 
-Personal research time is charged to Rubin along with the operations role time, the logic being that 
+Personal research time is charged to Rubin along with the operations role time, the logic being that
 scientists in operations roles must be engaged in research as well in order to succeed in their operations role.
 Rubin expects to pay the full rate for an individual with research time who contributes 1,440 hours to
-operations. 
-This is handled through indirect rates at both NOIRLab and direct charges to research accounts at SLAC. 
-Science time is included in the subcontracts of our partners at affiliated institutions through indirect charges 
+operations.
+This is handled through indirect rates at both NOIRLab and direct charges to research accounts at SLAC.
+Science time is included in the subcontracts of our partners at affiliated institutions through indirect charges
 similar to the case for NOIRLab.
 
 In Data Production, the base assumption is that 30\% of an individual's \RO operations time (i.e. 540 hours/year for a full-time developer, 432 hours/year for a full-time scientist) are devoted to overhead for regular meetings\footnote{``Meetings'' include, for example, scheduled weekly team meetings, stand-ups, etc; major conferences or project meetings involving preparation, travel time, etc should be scheduled in advance and allocated \glspl{SP}.}, ad-hoc discussions and other interruptions.
@@ -175,43 +175,43 @@ The plan for pre-operations and Survey Operations is embodied in:
 
 \begin{enumerate}
     \item
-        A set of \emph{Milestones}, each of which represents the delivery of a major aspect of Rubin Operations or the availability of specific functionality. 
+        A set of \emph{Milestones}, each of which represents the delivery of a major aspect of Rubin Operations or the availability of specific functionality.
         Milestones are officially defined in a \gls{JIRA} milestone issue.
     \item
-        A series of \emph{epics} describe major pieces of work. 
-        Epics are associated with concrete, albeit high-level, deliverables or outcomes that culminate in the achievement of the above milestones, and have specific resource loads (staff assignments story point values) end dates. 
-        All epics are linked to the milestone they are created to help deliver, although some epics might exist without linking to a milestone (level of effort epics, for example).  
+        A series of \emph{epics} describe major pieces of work.
+        Epics are associated with concrete, albeit high-level, deliverables or outcomes that culminate in the achievement of the above milestones, and have specific resource loads (staff assignments story point values) end dates.
+        All epics are linked to the milestone they are created to help deliver, although some epics might exist without linking to a milestone (level of effort epics, for example).
     \item
-        A visualization of progress on work done towards achieving milestones is captured in Smartsheet, which directly tracks progress by rolling up issues that are completed inside of \gls{JIRA} epics that work together to deliver a given milestone.      
+        A visualization of progress on work done towards achieving milestones is captured in Smartsheet, which directly tracks progress by rolling up issues that are completed inside of \gls{JIRA} epics that work together to deliver a given milestone.
 \end{enumerate}
 
 Milestones are allocated to one of three levels, defined as follows:
 
 \begin{description}
 \item[Level 1]
-These are at the full observatory level and owned by the Directors Office. 
-Examples are the completion of a Data Preview, the beginning of nightly observations for the full survey, or the delivery of an annual Data Release. 
-Level 1 milestones are achieved by the culmination of effort defined by a set of Level 2 and Level 3 milestones. 
+These are at the full observatory level and owned by the Directors Office.
+Examples are the completion of a Data Preview, the beginning of nightly observations for the full survey, or the delivery of an annual Data Release.
+Level 1 milestones are achieved by the culmination of effort defined by a set of Level 2 and Level 3 milestones.
 Level 1 milestones are reported to the agencies.
 \item[Level 2]
-These reflect effort within a Department and are owned by an Associate Director, or are cross-Department commitments. 
+These reflect effort within a Department and are owned by an Associate Director, or are cross-Department commitments.
 As such, they must be defined in consultation with the Director's Office.
 Level 2 milestones are achieved by the culmination of effort defined by a set of Level 3 milestones.
-Some Level 2 milestones may be reported to the agencies as defined by the annual POP. 
+Some Level 2 milestones may be reported to the agencies as defined by the annual POP.
 \item[Level 3]
 These are internal to a particular Department and assigned to a team and can therefore be specified by a single team lead.
 \end{description}
 
-Some of these milestones are exposed to external reviewers (usually reserved for Level 1 milestones): it is important that these be delivered on time and to specification. 
-Level 1 and 2 milestones are under change control once they are defined and described in a \gls{JIRA} Milestone issue.  
+Some of these milestones are exposed to external reviewers (usually reserved for Level 1 milestones): it is important that these be delivered on time and to specification.
+Level 1 and 2 milestones are under change control once they are defined and described in a \gls{JIRA} Milestone issue.
 Level 3 milestones are defined for use within Departments and not required to go under project change control, but properly adhering to the plan is important: your colleagues in other teams will use these milestones to align their schedules with yours, so they rely on you to be accurate.
 
 Epics should work to achieve milestones i.e. they may be blocking issues on the milestones.
 When a detailed description of work for a given \gls{epic} is known, it is described in \gls{JIRA}.
 It should then be assigned to the appropriate \glspl{cycle}.
 
-Progress is tracked toward achieving milestones in Smartsheet by monitoring completed story points in \gls{JIRA} epics and rolling up the total progress. 
-To ensure success, \gls{JIRA} epics must be completely detailed out prior to a full 6-month cycle and total effort should be estimated out for an entire fiscal year of effort, as detailed below.  
+Progress is tracked toward achieving milestones in Smartsheet by monitoring completed story points in \gls{JIRA} epics and rolling up the total progress.
+To ensure success, \gls{JIRA} epics must be completely detailed out prior to a full 6-month cycle and total effort should be estimated out for an entire fiscal year of effort, as detailed below.
 
 \subsection{Planning Research Work}
 \label{sec:long-term-research}
@@ -282,9 +282,9 @@ Each \gls{epic} loaded into the plan must have this minimum set of fields filled
   The exact \texttt{RO Milestone ID}text can be found in the Milestone issue or Smartsheet.
 \end{itemize}
 
-The fields above are required to have values entered because they define the connection to Smartsheet where effort-tracking for the full project is done. Other fields in the epic can also be filled in as needed. 
+The fields above are required to have values entered because they define the connection to Smartsheet where effort-tracking for the full project is done. Other fields in the epic can also be filled in as needed.
 
-Be aware that: (Amanda: I don't think all of the following bullets are true or necessary in the Operations non-EVMS era.  Should clarify with Cathy and Wil.) 
+Be aware that: (Amanda: I don't think all of the following bullets are true or necessary in the Operations non-EVMS era.  Should clarify with Cathy and Wil.)
 
 \begin{itemize}
 \item
@@ -308,7 +308,7 @@ In practice, to ensure your team is evenly loaded, it is usually necessary to br
 \subsubsection{Scheduling Research Work}
 \label{sec:research}
 
-%who gets research time of this type? All developers or just scientists. This is confusing since most people will think in terms of scientific research. NOIRLab engineers will get professional development time. 
+%who gets research time of this type? All developers or just scientists. This is confusing since most people will think in terms of scientific research. NOIRLab engineers will get professional development time.
 As discussed in \S\ref{sec:long-term-research}, research is sometimes required
 to meet our objectives. However, it is not a natural fit to our usual
 planning process, as it is speculative in its nature: it is often
@@ -421,7 +421,7 @@ Broadly, executing a sprint falls into three stages:
   ensure that completed stories are marked as \texttt{done}:
   experience suggests that this can easily be forgotten as developers
   rush on to the next challenge, but it is required to enable us to
-  properly track earned value as per \S\ref{sec:cycle-value}.
+  properly track effort toward milestones.
 
   When completing a \gls{story} we do not change the number of \glspl{SP} assigned to
   it: the \gls{SP} total reflects our initial estimate of the work involved,
@@ -532,20 +532,20 @@ Where tickets describe bugs or other urgent emergent work which cannot be deferr
 \section{Tracking Progress and Standard Reporting Cycle}
 \label{sec:reporting-cycle}
  Cathy ?
- 
+
 \subsection{Tracking Progress toward Milestones}
 
-Progress on completing epics is visualized in Smartsheet.  
-Smartsheet lists all Level 1 through Level 3 milestones in a gantt-chart style view.  
-Each Level 1 milestone is achieved by completing a series of Level 2 and/or Level 3 milestones.  
-Smartsheet tracks Story Points marked as complete in individual \gls{JIRA} epics in real time. 
-Progress on individual milestones is shown as the weighted total of Story Points within each epic contributing to the successful completion of the milestone. 
- 
+Progress on completing epics is visualized in Smartsheet.
+Smartsheet lists all Level 1 through Level 3 milestones in a gantt-chart style view.
+Each Level 1 milestone is achieved by completing a series of Level 2 and/or Level 3 milestones.
+Smartsheet tracks Story Points marked as complete in individual \gls{JIRA} epics in real time.
+Progress on individual milestones is shown as the weighted total of Story Points within each epic contributing to the successful completion of the milestone.
+
 \subsection{Reporting Cycle}
- 
-High level milestone progress will be reported to SLAC and NOIRLab regularly. 
-NOIRLab reports will flow quarterly (or monthly) to the NSF. 
-Rubin will show progress on all L1 milestones and any L2 milestones called out in the POP. 
+
+High level milestone progress will be reported to SLAC and NOIRLab regularly.
+NOIRLab reports will flow quarterly (or monthly) to the NSF.
+Rubin will show progress on all L1 milestones and any L2 milestones called out in the POP.
 
 
 \section{Personnel}
