--- a/body.tex
+++ b/body.tex
@@ -29,7 +29,7 @@ The Rubin Observatory Acting \ \gls{Director}  is Robert Blum, the Interim Deput
 They are the first point of contact for all issues regarding project management within \RO.
 
 The Program Coordinator is Cathy Petry.
-She monitors the budgets and maintains details within WeBud, the NOIRLab budgeting system. 
+She monitors the budgets and maintains details within Webud, the NOIRLab budgeting system. 
 She assists in developing the annual Program Operating Plan (POP), tracking milestones and reporting. 
 On the SLAC side, Christine Soldahl is the Business Manager who handles similar tasks. 
 
@@ -48,13 +48,13 @@ This detailed planning is the subject of this document.
 \label{sec:structure}
 
 Rubin Operations has four operational Departments in addition to the Director’s Office: RDO (Rubin Director’s Office), ROO (Rubin Observatory Operations), RDP (Rubin Data Production), RPF (Rubin System Performance), and REO (Rubin Education and Public Outreach). 
-Each operational Department is lead by an Associate Director.
+Each operational Department is led by an Associate Director.
 
 \subsection{Work Breakdown Structure}
 \label{sec:wbs}
 
 The \gls{WBS} provides a hierarchical description of the activity based organization of Rubin. 
-In operations, the WBS is not as formal as in a construction project, but it provides a useful structure to organize Rubin Operations and plan annual work around. 
+The WBS provides a useful structure to organize Rubin Operations and plan annual work around. 
 Rubin is the level 1 of the WBS, the departments are level 2, and teams within the departments are level 3. 
 Individual roles on operations are level 4.   
 
