--- a/body.tex
+++ b/body.tex
@@ -251,7 +251,7 @@ The following fields must be filled out when defining a new milestone:
   Examples include \textit{``Deliver Data Preview 0.1 (DP0.1)''} (an L1 milestone) and \textit{``DP0.1 Data Release: science-ready catalogs released from the IDF''} (an L2 milestone that belongs to it).
   % PJM: Should we homogenize the style here, and make Milestone summaries EITHER directives OR deliverables? Discussed with Amanda: leave this up to the teams' preferences.
 \item  
-  The \texttt{POP Activity Description} text should contain one or maybe two sentences summarizing the activity needed to complete the milestone. 
+  The \texttt{Activity Description} text should contain one or maybe two sentences summarizing the activity needed to complete the milestone. 
   Example: \textit{``Upgrade the WBS activity, labor and non-labor plans from V4 to V5 in order to capture a US DF at SLAC, a UK DF, and any other modifications needed, and estimate the corresponding budget.''} 
   Note that only L1 (and sometimes L2) milestones are actually listed in the NOIRLab Program Operations Plan (POP), but Rubin adopts the same structure for all its milestones.
 \item
