--- a/RTN-005.tex
+++ b/RTN-005.tex
@@ -29,7 +29,7 @@ William O'Mullane,  Amanda Bauer, Robert Blum, Phil Marshall
 % \setDocCurator{The Curator of this Document}
 
 \setDocAbstract{%
-This document describes guidelines for the management of effort in Vera C. Rubin Operations. It describes the process for agile-based work, including tasks that are carried out with regularity (nightly or monthly, etc), long-term development work that iteratively incorporates user feedback, and Level of Effort work as well.
+This document describes guidelines for the management of effort in Vera C. Rubin Observatory Operations. It describes the process for agile-based work, including tasks that are carried out with regularity (nightly or monthly, etc), long-term development work that iteratively incorporates user feedback, and Level of Effort work as well. This document describes how effort towards an annually-planned schedule is tracked. 
 }
 
 % Change history defined here.
