--- a/body.tex
+++ b/body.tex
@@ -313,17 +313,19 @@ Each \gls{epic} loaded into the plan must have this minimum set of fields filled
 
 \begin{itemize}
 \item
-  A concrete, well defined deliverable \emph{or} be clearly described as a ``bucket'' (\S\ref{sec:bucket});
+  A concrete, well defined deliverable \emph{or} be clearly described as a ``bucket'' or ``emergent work'' (\S\ref{sec:bucket});
 \item
   The \texttt{Component} field set to the appropriate Department;
 \item
-  The \texttt{Due Date} field set to the appropriate date, which does not exceed the due date of the Milestone it is labeled to achieve.
-\item
-  The \texttt{Story Points} field set to a (non-zero!) estimate of the effort required to complete the \gls{epic} in terms of \glspl{SP} (see \S\ref{sec:effort}).
+  The \texttt{Story Points} field set to a (non-zero) estimate of the effort required to complete the \gls{epic} in terms of \glspl{SP} (see \S\ref{sec:effort}).
 \item
   The \texttt{RO Milestone ID} field set to the appropriate L3 or L2 milestone that the epic will contribute to achieving (or achieve in its totality).
   The exact \texttt{RO Milestone ID}text can be found in the Milestone issue or Smartsheet.
 \end{itemize}
+\item
+  The \texttt{Due Date} field set to the appropriate date, which does not exceed the due date of the Milestone it is labeled to achieve.
+\item
+  The \texttt{label} field is set to identify the fiscal year during which the work will be done. Examples are FY22 or FY23.
 
 The fields above are required to have values entered because they define the connection to Smartsheet where effort-tracking for the full project is done. Other fields in the epic can also be filled in as needed. 
 
