--- a/body.tex
+++ b/body.tex
@@ -167,6 +167,8 @@ For example, working through tutorials, reading documentation, and so on are all
 Individuals in leadership roles may find it necessary to assign a larger fraction of their time to \gls{LOE} type work, and therefore spend fewer hours generating \glspl{SP}.
 The ratio of hours to \glspl{SP} remains constant, but the number of hours decreases.
 
+
+% should be explain the "annual planning" process here and emphasize what the Agencies (NSF/NOIRLab) are asking us to report?  Milestones, Milestone Activities, Deliverables.  I could imagine have a brief section describing annual planning, a section on progress tracking, a section on reporting.  We should also comment on the difference between the DOE and NSF side regarding FWP and annual planning timing.  It works in our favor, but we could summarize that in the way Phil did in his JODR presentation. 
 \section{Long Term Planning}
 \label{sec:long-term-plan}
 
