--- a/body.tex
+++ b/body.tex
@@ -5,6 +5,8 @@ This document provides a guide to the \VRO \   approach to annual planning.
 See also the the operations proposal \citeds{LDO-31}.
 In operations, there is no formal \gls{EVMS} required from the funding Agencies so a schedule is planned in detail on an annual basis and effort towards that schedule is tracked through a level of effort process.
 
+The annual planning process starts by setting high level Milestones for the year, which are centered around releasing data to the public and major maintenance to the telescope system. The Leadership Team builds a series of milestone activities that are discrete pieces of work within Departments and Teams to collectively deliver the high level milestones.  Teams record their day to day work in Jira and overall progress is monitored automatically through Smartsheet and reported through our managing organizations. 
+
 There are a few main ways work will be managed, some within an Agile framework (particularly for data release planning). 
 The Agile method is a set of practices that allow the ability to adapt and respond to change through collaboration between self-managing, cross-functional teams.  
 To the extent possible, we focus on the people doing the work and how they work together. 
@@ -177,12 +179,12 @@ The plan for pre-operations and Survey Operations is embodied in:
 
 \begin{enumerate}
     \item
-        A set of \emph{Milestones}, each of which represents the delivery of a major aspect of Rubin Operations or the availability of specific functionality. 
-        Milestones are officially defined in a \gls{JIRA} milestone issue.
+        A set of \emph{Milestones}, each of which represents the delivery of a major aspect of Rubin Operations, availability of specific functionality, or maintenance event for the telescope system. 
+        Milestones are planned in Smartsheet and then officially defined in a \gls{JIRA} milestone issue.
     \item
         A series of \emph{epics} describe major pieces of work. 
-        Epics are associated with concrete, albeit high-level, deliverables or outcomes that culminate in the achievement of the above milestones, and have specific resource loads (staff assignments story point values) end dates. 
-        All epics are linked to the milestone they are created to help deliver, although some epics might exist without linking to a milestone (level of effort epics, for example).  
+        Epics are associated with concrete, albeit high-level, deliverables or outcomes that culminate in the achievement of the above milestones, and have specific resource loads (staff assignments story point values) and end dates. 
+        All epics are linked to the milestone they are created to help deliver, although some epics might exist without linking to a milestone (level of effort or emergent work epics, for example).  
     \item
         A visualization of progress on work done towards achieving milestones is captured in Smartsheet, which directly tracks progress by rolling up issues that are completed inside of \gls{JIRA} epics that work together to deliver a given milestone.      
 \end{enumerate}
